hphp/hack/test/typecheck/incorrect_darray.php.exp
File "incorrect_darray.php", line 3, characters 28-28:
A comma (',') is expected here. (Parsing[1002])
